--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,8 +69,8 @@ a{
 
 .block-text{
   max-width: 580px;
-  text-align: center;
-  margin: 0 auto;
+  //text-align: center;
+  //margin: 0 auto;
 }
 .text-label{
   line-height: 83.333%;
